tests/expectations/compiler/finalize/rand_incorrect_type_fail.out
Error [ETYC0372117]: Expected type `scalar` but type `field` was found.
    --> compiler-test:12:21
     |
  12 |     let a: scalar = ChaCha::rand_field();
     |                     ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `group` but type `field` was found.
    --> compiler-test:13:20
     |
  13 |     let b: group = ChaCha::rand_field();
     |                    ^^^^^^^^^^^^^^^^^^^^
